pagina_consolidada limpia para poner lo de denarius

--- a/15onLine-frontend-web/.settings/org.eclipse.wst.common.component
+++ b/15onLine-frontend-web/.settings/org.eclipse.wst.common.component
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-                                            
+                                                
+    
     
     
     
@@ -10,7 +11,8 @@
     
     
     <wb-module deploy-name="15onLine-frontend-web">
-                                                                                        
+                                                                                                
+        
         
         
         
@@ -21,7 +23,8 @@
         
         
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
-                                                                                        
+                                                                                                
+        
         
         
         
@@ -32,7 +35,8 @@
         
         
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-                                                                                        
+                                                                                                
+        
         
         
         
@@ -43,7 +47,8 @@
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-                                                                                        
+                                                                                                
+        
         
         
         
@@ -54,20 +59,29 @@
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+                
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/target/generated-sources/annotations"/>
-                
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/target/generated-test-sources/test-annotations"/>
+                        
+        
         <dependent-module archiveName="15onLine-cliente-ws-2.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/15onLine-cliente-ws/15onLine-cliente-ws">
-                        
+                                    
+            
             <dependency-type>uses</dependency-type>
-                    
+                                
+        
         </dependent-module>
-                
+                        
+        
         <dependent-module archiveName="15onLine-loginmodule-realm-2.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/15onLine-loginmodule-realm/15onLine-loginmodule-realm">
-                        
+                                    
+            
             <dependency-type>uses</dependency-type>
-                    
+                                
+        
         </dependent-module>
-                                                                                        
+                                                                                                
+        
         
         
         
@@ -78,10 +92,12 @@
         
         
         <property name="java-output-path" value="/15onLine-frontend-web/target/classes"/>
-                        
+                                
+        
         
         <property name="context-root" value="15onLine-frontend-web"/>
-                                                                                    
+                                                                                            
+    
     
     
     
@@ -92,7 +108,8 @@
     
     
     </wb-module>
-                                        
+                                            
+
 
 
 
